<resources>
    <string name="app_name">ArmStarter</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Петя Быстрых</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_LeftMenu_f1">Training</string>
    <string name="app_stats">Stats</string>
    <string name="action_about">About</string>
    <string name="app_info">Information</string>
    <string name="app_exit">Exit</string>
    <string name="app_maintext">Reaction</string>
    <string name="app_top100" translatable="false">Top 100</string>
    <string name="nav_header_subtitle">all in your hands</string>
    <string name="app_maintext2">Power</string>
    <string name="app_maintext3">motion time</string>
</resources>
