<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_fitness"
            android:title="@string/app_LeftMenu_f1" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/app_stats" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/app_info">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/action_about" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/app_exit" />
        </menu>
    </item>

</menu>
